[tool.poetry]
name = "MockyEnd"
version = "0.1.0"
description = ""
authors = ["Rafael Ribeiro <tecinfo.rafael@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
sqlalchemy = "^2.0.30"
pydantic-settings = "^2.2.1"
alembic = "^1.13.3"
httpx = "^0.27.2"
typer = "^0.12.5"
asyncpg = "^0.29.0"
dependency-injector = "^4.42.0"
psycopg2-binary = "^2.9.10"
uvicorn = "^0.32.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
codecov = "^2.1.13"
pytest-asyncio = "^0.23.7"
ruff = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
#addopts = "--cov=app --cov-report=term-missing"
testpaths = [
    "tests"
]


[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true